<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_shop" android:title="@string/action_shop"
        android:icon="@drawable/ic_shop"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_sale" android:title="@string/action_sale"
        android:icon="@drawable/ic_todo"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_store" android:title="@string/action_store"
        android:icon="@drawable/ic_store"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_account" android:title="@string/action_account"
        android:icon="@drawable/ic_user"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_share" android:title="@string/action_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="100" app:showAsAction="always" />
</menu>
